--- a/.github/workflows/third-workflow.yaml
+++ b/.github/workflows/third-workflow.yaml
@@ -1,9 +1,18 @@
 name: 3rd workflow
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Select environment"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - stage
+          - prod
+
 
 jobs:
   test:
@@ -12,4 +21,14 @@ jobs:
     steps:
       - name: echo
         run: echo "hi hello please"
-        
+  deploy:
+    name: deploy
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: echo
+        run: |
+          echo "this is deploy after test"
+          echo "yes
+          "
+
