--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -1,7 +1,7 @@
 name: Terraform deployment
 
 on:
-  workflow-dispatch
+  workflow-dispatch:
     inputs:
       environment:
         description: choose environment
@@ -51,6 +51,6 @@ jobs:
         working-directory: environments/${{ inputs.environment }}
         run: terraform apply --auto-approve
 
-        
+
 
       
