--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -1,7 +1,7 @@
 name: Terraform deployment
 
 on:
-  workflow-dispatch:
+  workflow_dispatch:
     inputs:
       environment:
         description: choose environment
