--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -16,7 +16,7 @@ permissions:
 jobs:
   terraform:
     name: deployment to ${{ github.event.inputs.environment }}
-    runs-on: ubuntu-latest
+    runs-on: aravind-self-runner1
     environment: ${{ github.event.inputs.environment }}
     steps:
       - name: checkout code
