--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -19,6 +19,10 @@ jobs:
     runs-on: self-hosted
     environment: ${{ github.event.inputs.environment }}
     steps:
+      - name: Install unzip (for self-hosted runner)
+        if: contains(runner.labels, self-hosted)
+        run: sudo apt-get update && sudo apt-get install -y unzip
+
       - name: checkout code
         uses: actions/checkout@v4
 
