--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: self-hosted
     environment: ${{ github.event.inputs.environment }}
     steps:
-      - name: Install unzip (for self-hosted runner)
+      - name: Install unzip (for self-hosted runner machine)
         if: contains(runner.labels, 'self-hosted')
         run: sudo apt-get update && sudo apt-get install -y unzip
 
