--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -23,6 +23,11 @@ jobs:
         if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y unzip
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+        node-version: '18'
+
       - name: checkout code
         uses: actions/checkout@v4
 
