--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -4,55 +4,54 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: choose environment
+        description: 'choose environment (Dev, Stage, Prod)''
         type: choice
         options: [dev, test, prod]
         required: true
+
+env:
+  TF_VERSION: 1.6.0
+  
 permissions:
   id-token: write
   contents: read
   pull-requests: write
 
 jobs:
-  terraform:
-    name: deployment to ${{ github.event.inputs.environment }}
-    runs-on: self-hosted
-    environment: ${{ github.event.inputs.environment }}
+  terraform--plan:
+    name: Terraform Plan
+    runs-on: ubuntu-latest
     steps:
-      - name: Install unzip (for self-hosted runner machine)
-        if: runner.os == 'Linux'
-        run: sudo apt-get update && sudo apt-get install -y unzip
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION }}
       
-      - name: setup terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-      - name: terraform init
+      - name: Terraform Format
+        run: terraform fmt -check -recursive
+
+      - name: Terraform Init
         working-directory: terraform/environments/${{ github.event.inputs.environment }}
         run: terraform init
 
-      - name: terraform validate
+      - name: Terraform Validate
         working-directory: terraform/environments/${{ github.event.inputs.environment }}
         run: terraform validate
 
-      - name: terraform plan
+      - name: Terraform Plan
         id: plan
         working-directory: terraform/environments/${{ github.event.inputs.environment }}
-        run: terraform plan -var-file=${{ github.event.inputs.environment }}.tfvars
-
+        run: terraform plan -var-file=${{ github.event.inputs.environment }}.tfvars -out=tfplan
+  
+  terraform-apply:
+    name: Terraform Apply
+    runs-on: ubuntu-latest
+    needs: terraform-plan
+    environment: ${{ github.event.inputs.environment }}
+    steps:     
       - name: terraform apply
         working-directory: terraform/environments/${{ github.event.inputs.environment }}
         run: terraform apply --auto-approve -var-file=${{ github.event.inputs.environment }}.tfvars
