--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -8,6 +8,11 @@ on:
         type: choice
         options: [dev, test, prod]
         required: true
+        default: 'dev'
+      image_tag:
+        description: "Docker image tag (e.g. github.sha)"
+        required: true
+        default: "latest"
 
 env:
   TF_VERSION: 1.6.0
@@ -18,7 +23,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  terraform--plan:
+  terraform-plan:
     name: Terraform Plan
     runs-on: ubuntu-latest
     steps:
@@ -44,17 +49,35 @@ jobs:
       - name: Terraform Plan
         id: plan
         working-directory: terraform/environments/${{ github.event.inputs.environment }}
-        run: terraform plan -var-file=${{ github.event.inputs.environment }}.tfvars -out=tfplan
+        run: terraform plan -var="image_tag=${{ github.event.inputs.image_tag }}" -var-file=${{ github.event.inputs.environment }}.tfvars -out=tfplan
   
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform-plan
     environment: ${{ github.event.inputs.environment }}
-    steps:     
-      - name: terraform apply
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
+      - name: Download tfplan artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: tfplan
+          path: terraform/environments/${{ github.event.inputs.environment }}
+
+      - name: Terraform Init
         working-directory: terraform/environments/${{ github.event.inputs.environment }}
-        run: terraform apply --auto-approve -var-file=${{ github.event.inputs.environment }}.tfvars
+        run: terraform init
+
+      - name: Terraform Apply
+        working-directory: terraform/environments/${{ github.event.inputs.environment }}
+        run: terraform apply -auto-approve tfplan
 
 
 
